--- a/back/package.json
+++ b/back/package.json
@@ -12,15 +12,19 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "prisma": "^5.12.1"
+    "@types/multer": "^1.4.11",
+    "prisma": "^5.13.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^5.12.1",
+    "@prisma/client": "^5.13.0",
+    "@web3-storage/w3up-client": "^12.5.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1",
     "zod": "^3.23.0"
   }
 }
