--- a/front/package.json
+++ b/front/package.json
@@ -4,19 +4,33 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "bundle": "next build",
+    "startNode": "node server.js",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.372.0",
-    "next": "14.2.2",
+    "@alchemy/aa-core": "^3.9.0",
+    "@biconomy/account": "^4.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.32.0",
+    "@web3modal/wagmi": "^4.1.11",
+    "lucide": "^0.373.0",
+    "lucide-react": "^0.373.0",
+    "next": "^14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18",
+    "sharp": "^0.33.3",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.9.26",
+    "wagmi": "^2.5.21"
   },
   "devDependencies": {
     "typescript": "^5",
