--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# back
+**/dist
+
 # dependencies
 **/node_modules
 **/.pnp
@@ -8,6 +11,7 @@
 
 # testing
 **/coverage
+**/coverage.json
 
 # next.js
 **/.next/
@@ -27,6 +31,7 @@
 
 # local env files
 **/.env*.local
+**/.env
 
 # vercel
 **/.vercel
@@ -34,3 +39,14 @@
 # typescript
 **/*.tsbuildinfo
 **/next-env.d.ts
+
+# Hardhat files
+**/cache
+**/artifacts
+
+# TypeChain files
+**/typechain
+**/typechain-types
+
+# Hardhat Ignition default folder for deployments against a local node
+**/ignition/deployments/chain-31337
