--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,8 @@
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
+    "permissionless": "^0.1.21",
+    "viem": "^2.9.27",
     "zod": "^3.23.0"
   }
 }
