--- a/front/package.json
+++ b/front/package.json
@@ -10,18 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@alchemy/aa-core": "^3.9.0",
-    "@biconomy/account": "^4.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.32.0",
     "@web3modal/wagmi": "^4.1.11",
+    "class-variance-authority": "^0.7.0",
     "lucide": "^0.373.0",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
     "next-themes": "^0.3.0",
+    "permissionless": "^0.1.21",
     "react": "^18",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18",
