--- a/back/package.json
+++ b/back/package.json
@@ -22,6 +22,7 @@
     "@prisma/client": "^5.13.0",
     "@web3-storage/w3up-client": "^12.5.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.1",
